[package]
name = "knock-cli"
version = "0.1.0"
edition = "2021"
authors = ["Timothy Ye"]
homepage = "https://github.com/TimothyYe/knock"
repository = "https://github.com/TimothyYe/knock"
description = "A port knocking client"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
