[package]
name = "knockd"
version = "0.1.0"
edition = "2021"
authors = ["Timothy Ye"]
homepage = "https://github.com/TimothyYe/knock"
repository = "https://github.com/TimothyYe/knock"
description = "A port knocking server written in Rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.21"
pnet = "0.34.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
